search-in-workspace: correct scrollbar display when no results

--- a/packages/search-in-workspace/src/browser/styles/index.css
+++ b/packages/search-in-workspace/src/browser/styles/index.css
@@ -14,8 +14,12 @@
  * SPDX-License-Identifier: EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0
  ********************************************************************************/
 
- #search-in-workspace {
+#search-in-workspace {
     height: 100%;
+}
+
+#search-in-workspace .theia-TreeContainer.empty {
+    overflow: hidden;
 }
 
 .t-siw-search-container {
